Adding Bearer tocken to Swagger and adding Routes in swagger
